--- a/cs/style.css
+++ b/cs/style.css
@@ -63,6 +63,7 @@ ul{
     margin-bottom: 1.8em;
     /* height: 90% */
 }
+
 .pmo p{
     margin: 0;
 }
@@ -492,7 +493,7 @@ font-size: 22px;
 .mtbo{
     margin: .5em 0;
 }
-.tal{
+.talm{
    position: relative;
    left: -2em;
 }
@@ -501,107 +502,7 @@ font-size: 22px;
     padding-top: .5em;
 }
 
-.show {
-	perspective:5000px;
-	-webkit-transform:rotateX(-45deg);
-	-moz-transform:rotateX(-45deg);
-	transform:rotateX(-45deg);
-	transform-style:preserve-3d;
-}
-.box {
-	position:relative;
-	width:150px;
-	height:250px;
-	border:1px solid red;
-	margin:300px auto;
-	transform-style:preserve-3d;
-	-webkit-animation:rotate1 10s linear infinite;
-	-moz-animation:rotate1 10s linear infinite;
-    animation:rotate1 10s linear infinite;
-    background-image: url(../images/dy3.jpg);
-}
-.box img {
-	width:150px;
-	height:250px;
-	border:1px solid #ccc;
-	position:absolute;
-	left:0;
-	top:0;
-	-webkit-box-reflect:below 20px -webkit-linear-gradient(top,rgba(250,250,250,0),rgba(250,250,250,0) 30%,rgba(250,250,250,0.5));
-}
-.img1 {
-	-webkit-transform:translateZ(300px);
-	-moz-transform:translateZ(300px);
-	transform:translateZ(300px);
-}
-.img2 {
-	-webkit-transform:rotateY(36deg) translateZ(300px);
-	-moz-transform:rotateY(36deg) translateZ(300px);
-	transform:rotateY(36deg) translateZ(300px);
-}
-.img3 {
-	-webkit-transform:rotateY(72deg) translateZ(300px);
-	-moz-transform:rotateY(72deg) translateZ(300px);
-	transform:rotateY(72deg) (300px);
-}
-.img4 {
-	-webkit-transform:rotateY(108deg) translateZ(300px);
-	-moz-transform:rotateY(108deg) translateZ(300px);
-	transform:rotateY(108deg) translateZ(300px);
-}
-.img5 {
-	-webkit-transform:rotateY(144deg) translateZ(300px);
-	-moz-transform:rotateY(144deg) translateZ(300px);
-	transform:rotateY(144deg) translateZ(300px);
-}
-.img6 {
-	-webkit-transform:rotateY(180deg) translateZ(300px);
-	-moz-transform:rotateY(180deg) translateZ(300px);
-	transform:rotateY(180deg) translateZ(300px);
-}
-.img7 {
-	-webkit-transform:rotateY(216deg) translateZ(300px);
-	-moz-transform:rotateY(216deg) translateZ(300px);
-	transform:rotateY(216deg) translateZ(300px);
-}
-.img8 {
-	-webkit-transform:rotateY(252deg) translateZ(300px);
-	-moz-transform:rotateY(252deg) translateZ(300px);
-	transform:rotateY(252deg) translateZ(300px);
-}
-.img9 {
-	-webkit-transform:rotateY(288deg) translateZ(300px);
-	-moz-transform:rotateY(288deg) translateZ(300px);
-	transform:rotateY(288deg) translateZ(300px);
-}
-.img10 {
-	-webkit-transform:rotateY(324deg) translateZ(300px);
-	-moz-transform:rotateY(324deg) translateZ(300px);
-	transform:rotateY(324deg) translateZ(300px);
-}
-@-moz-keyframes rotate1 {
-	0% {
-	-webkit-transform:rotateY(0deg);
-	-moz-transform:rotateY(0deg);
-	transform:rotateY(0deg);
-}
-100% {
-	-webkit-transform:rotateY(360deg);
-	-moz-transform:rotateY(360deg);
-	transform:rotateY(360deg);
-}
-}@-webkit-keyframes rotate1 {
-	0% {
-	-webkit-transform:rotateY(0deg);
-	-moz-transform:rotateY(0deg);
-	transform:rotateY(0deg);
-}
-100% {
-	-webkit-transform:rotateY(360deg);
-	-moz-transform:rotateY(360deg);
-	transform:rotateY(360deg);
-    }
-}
+
 .film button{
     background: rgb(226, 101, 163,.4);
     border: none;
@@ -625,7 +526,6 @@ font-size: 22px;
 .bge{
     background-color: rgba(245, 234, 234);
     padding: .5em 1em;
-    
 }
 .pto{
     padding-top: 4em;
@@ -673,4 +573,23 @@ font-size: 22px;
     margin: 0;
     font-size: .8em;
     color: #666;
+}
+.bdtb{
+    border-top: 1px dotted #999;
+    border-bottom: 1px dotted #999;
+    padding: .5em 0;
+}
+.bdtb p{
+    text-indent: 0;
+    margin: 0
+}
+.recflex{
+    display: flex;
+}
+.recflex img{
+    width: 20%;
+    height:100px;
+}
+.mwg>img{
+    width: 100%
 }
