--- a/cs/style.css
+++ b/cs/style.css
@@ -717,3 +717,9 @@ font-size: 22px;
 .lun{
     width: 20%;
 }
+.pilun{
+    display: block;
+    width: 100%;
+    height:6em;
+    margin-bottom: 1em;
+}
