--- a/view/usw.html
+++ b/view/usw.html
@@ -1,82 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>企业文化</title>
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../csw.css"> -->
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
-        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./cs/style.css">
-</head>
-<body>
-        <header class="fixed-top">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light container">
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="天下视" class="logo"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item ">
-                                <a class="nav-link " href="index.html">主页<span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item active dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    关于我们
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="us.html">关于我们</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="us.html">企业介绍</a>
-                                    <a class="dropdown-item" href="usw.html">企业文化</a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="rec.html" id="navbarDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    产品展示
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="rec.html">产品展示</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="rec.html">社交网络</a>
-                                    <a class="dropdown-item" href="game.html">VR 游戏</a>
-                                    <a class="dropdown-item" href="move.html">VR 影视</a>
-                                    <a class="dropdown-item" href="recsb.html">VR 设备</a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    新闻动态
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="new.html">企业新闻</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="new1.html">企业新闻</a>
-                                    <a class="dropdown-item" href="new2.html">行业新闻</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="jion.html">加入我们</a>
-                            </li>
-                        </ul>
-                        <form class="form-inline my-2 my-lg-0">
-                            <a class="nav-link disabled" href="jion.html">联系我们</a>
-                            <i class="fas fa-phone-volume"></i>
-                            <a class="nav-link" href="#">400-0000-0000</a>
-                        </form>
-                    </div>
-                </nav>
-            </header>
+<!-- header start -->
+<?php  include('./view/common/header.html') ; ?>
+<!-- header start -->
             <div class="container mpz mt">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
@@ -86,62 +10,7 @@
                     </ol>
                 </nav>
                 <div class="grid">
-                    <div class="grr1">
-                        <img class="aut" src="images/usw.jpg" class="img-fluid" alt="Responsive image">
-                    </div>
-                    <div class="grr2">
-                        <p>VR</p>
-                        <p>世界触手可及 只手可摘星晨</p>
-                    </div>
-                </div>
-                <p class="tit">
-                    创造智能安全高效的生活方式！
-                </p>
             </div>
-            <footer class="bgc">
-                    <div class="container">
-                        <div class="row ft">
-                            <div class="col-lg-7">
-                                <div class="rwo">
-                                    <div class="col-lg-12 mpz">
-                                        <h5>联系我们</h5>
-                                    </div>
-                                    <div class="col-lg-12 mpz">
-                                        <h6 class="po">天下视</h6>
-                                    </div>
-                                    <div class="row pp">
-                                        <div class="col-lg-6">
-                                            <p> 地址：广东省深圳市科兴科学园</p>
-                                            <p>手机：17303169207 / 18501562740</p>
-                                            <p> 邮编：517000</p>
-                                        </div>
-                                        <div class="col-lg-6 ">
-                                            <p> 传真：0755-88886666</p>
-                                            <p>电话：0755-88886666</p>
-                                            <p>邮箱: 1484552626@qq.com</p>
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <p>
-                                                关注我们:
-                                            </p>
-                                        </div>
-                                        <div class="col-lg-8">
-                                            <img src="images/tcs.jpg" alt="" class="tcs">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="images/tab.png" alt="" class="tab">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container bgb">
-                        <span >
-                            Copyright 2018
-                            <a href="#" class="fta">www.tcsvr.com</a>
-                        </span>
-                    </div>
-                </footer>
-        </body>
-</html>
+<!-- footer start -->
+<?php include('view/common/footer.html') ?>
+<!-- footer end -->
