--- a/view/common/header.html
+++ b/view/common/header.html
@@ -12,54 +12,211 @@
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
         crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="<?php echo _CSS_ ?>style.css">
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+
+        div {
+            text-align: center;
+            clear: both;
+        }
+
+        #csw_img {
+            width: 90px;
+            height: 50px;
+            float: left;
+            margin-left: 20px;
+            margin-bottom: 20px;
+        }
+
+        #csw_box {
+            width: 100%;
+            height: 700px;
+            background: rgba(0, 0, 0, 0.4);
+            position: absolute;
+            top: 0;
+            display: none;
+            z-index: 9999;
+        }
+
+        #csw_box #csw_content {
+            width: 355px;
+            height: 400px;
+            background: #fff;
+            margin: 100px auto 0;
+
+        }
+
+        #close {
+            color: #333;
+            font-size: 24px;
+            cursor: pointer;
+            float: right;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+            line-height: 30px;
+            background: #ccc;
+        }
+
+        #close:hover {
+            color: #fff;
+            background: #333;
+        }
+
+        #csw_content input {
+            position: relative;
+            width: 300px;
+            height: 40px;
+            border: 1px solid #ccc;
+            margin: 10px 0;
+            text-indent: 20px;
+        }
+
+        #hid_user {
+            display: none;
+        }
+        
+        #csw_content #csw_but{
+            text-align: center;
+           
+            text-indent: 0;
+        }
+        #csw_reg{
+            position: relative;
+            right: -60px;
+            top: 50px;
+        }
+        .csw_tle{
+            position: relative;
+            right: 40px;
+            top: 10px;
+            color: red;
+        }
     </style>
 </head>
-<body>
-        <header class="fixed-top">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light container">
-                <a class="navbar-brand" href="<?php echo _WEB_ ?>index.php"><img src="images/logo.jpg" alt="天下视" class="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link " href="<?php echo _WEB_ ?>index.php">主页<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                                <a class="nav-link " href="<?php echo _WEB_ ?>us.php">关于我们<span class="sr-only">(current)</span></a>
-                            
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="<?php echo _WEB_ ?>rec.php" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                产品展示
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="<?php echo _WEB_ ?>rec.php">产品展示</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="<?php echo _WEB_ ?>rec.php">社交网络</a>
-                                <a class="dropdown-item" href="<?php echo _WEB_ ?>game.php">VR 游戏</a>
-                                <a class="dropdown-item" href="<?php echo _WEB_ ?>move.php">VR 影视</a>
-                                <a class="dropdown-item" href="<?php echo _WEB_ ?>recsb.php">VR 设备</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="<?php echo _WEB_ ?>new.php">新闻资讯</a>
 
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?php echo _WEB_ ?>jion.php">加入我们</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <a class="nav-link disabled" href="<?php echo _WEB_ ?>jion.php">联系我们</a>
-                        <i class="fas fa-phone-volume"></i>
-                        <a class="nav-link" href="#">400-0000-0000</a>
-                    </form>
-                </div>
-            </nav>
-        </header>
+<body>
+
+    <div id="csw_box">
+        <div id="csw_content">
+
+            <span title="关闭" id="close">X</span>
+            <div><img id="csw_img" src="images/logo.jpg" alt="">
+
+                <span class="csw_tle">天下视</span>
+            </div>
+
+            <form action="">
+                <input placeholder="用户名" type="text" name="" id="username">
+                <input placeholder="密 码" type="password" name="" id="password">
+                <input type="button" value="登 录 " id="csw_but">
+            </form>
+            <div id="csw_reg">
+                <span>如果没有请先</span> <a href="register.php">注册</a>
+            </div>
+        </div>
+    </div>
+
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light container">
+            <a class="navbar-brand" href="<?php echo _WEB_ ?>index.php"><img src="images/logo.jpg" alt="天下视"
+                    class="logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link " href="<?php echo _WEB_ ?>index.php">主页<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link " href="<?php echo _WEB_ ?>us.php">关于我们<span
+                                class="sr-only">(current)</span></a>
+
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="<?php echo _WEB_ ?>rec.php" id="navbarDropdown"
+                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            产品展示
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="<?php echo _WEB_ ?>rec.php">产品展示</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="<?php echo _WEB_ ?>rec.php">社交网络</a>
+                            <a class="dropdown-item" href="<?php echo _WEB_ ?>game.php">VR 游戏</a>
+                            <a class="dropdown-item" href="<?php echo _WEB_ ?>move.php">VR 影视</a>
+                            <a class="dropdown-item" href="<?php echo _WEB_ ?>recsb.php">VR 设备</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="<?php echo _WEB_ ?>new.php">新闻资讯</a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="<?php echo _WEB_ ?>jion.php">加入我们</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <a class="nav-link disabled" href="<?php echo _WEB_ ?>jion.php">联系我们</a>
+                    <!-- <i class="fas fa-phone-volume"></i>
+                    <a class="nav-link" href="#">400-0000-0000</a> -->
+                    <?php if(!isset($_COOKIE['islog']) || empty($_COOKIE['islog'])){ ?>
+                    <a href="javascript:;" id="login">登录</a>
+                    <a href="" id="hid_user"></a>
+                    <?php }else{ ?>
+                    <a href="user_info.php"><?php echo isset($_COOKIE['username'])?$_COOKIE['username']:''; ?></a>
+                    <a href="out.php">&emsp;退出</a>
+                    <?php } ?>
+                    <!-- <a href="javascript:;" id="login">登陆</a>&emsp;
+                    <a href="javascript:;">注册</a> -->
+                </form>
+            </div>
+        </nav>
+    </header>
+    <script>
+        // alert($.cookie('username'));
+        // js获取窗口的高
+        var dh = document.documentElement.clientHeight;
+        // 把窗口的高赋值给遮挡层
+        $('#csw_box').css('height', dh + 'px');
+        // 点击登录，显示遮挡层
+        $('#login').click(function () {
+            $('#csw_box').css({ display: 'block' });
+        });
+
+        $('#close').click(function () {
+            $('#csw_box').css({ display: 'none' });
+        });
+
+        $('#csw_but').click(function () {
+            // 获取表单元素值
+            var username = $('#username').val();
+            var password = $('#password').val();
+            $.post(
+                'login.php',
+                { username: username, password: password },
+                function (result) {
+
+                    // alert(result)
+                    if (result == 1) {
+                        $('#login').css('display', 'none');
+                        $('#hid_user').text(username);
+                        $('#hid_user').attr('href', 'user.php');
+                        $('#hid_user').css('display', 'inline');
+                        $('#csw_box').css({ display: 'none' });
+                    } else {
+                        alert('用户名密码错误');
+                    }
+                }
+            );
+            // 返回 登录状态
+        });
+    </script>
