--- a/view/common/header.html
+++ b/view/common/header.html
@@ -209,7 +209,7 @@
                     if (result == 1) {
                         $('#login').css('display', 'none');
                         $('#hid_user').text(username);
-                        $('#hid_user').attr('href', 'user.php');
+                        $('#hid_user').attr('href', 'user_info.php');
                         $('#hid_user').css('display', 'inline');
                         $('#csw_box').css({ display: 'none' });
                     } else {
