--- a/view/recjdet.html
+++ b/view/recjdet.html
@@ -6,8 +6,7 @@
     <nav aria-label="breadcrumb" class=" container mt flex">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="<?php echo _WEB_ ?>index.php">主页</a></li>
-            <li class="breadcrumb-item"><a href="<?php echo _WEB_ ?>new.php">新闻动态</a></li>
-            <li class="breadcrumb-item"><a href="<?php echo _WEB_ ?>new2.php">行业新闻</a></li>
+            <li class="breadcrumb-item"><a href="<?php echo _WEB_ ?>rec.php">社交网络</a></li>
             <li class="breadcrumb-item active" aria-current="page">Dream World</li>
         </ol>
         <a href="">更多</a>
