--- a/view/recmdet.html
+++ b/view/recmdet.html
@@ -221,6 +221,6 @@
 
 </body>
 </html>
-<script src=".<?php echo _JS_ ?>jquery-ui.js"></script>
-<link rel="stylesheet" href=".<?php echo _JS_ ?>jquery-ui.css">
-<script src=".<?php echo _JS_ ?>move.js"></script>
+<script src="<?php echo _JS_ ?>jquery-ui.js"></script>
+<link rel="stylesheet" href="<?php echo _JS_ ?>jquery-ui.css">
+<script src="<?php echo _JS_ ?>move.js"></script>
