--- a/view/us.html
+++ b/view/us.html
@@ -9,8 +9,11 @@
                 <li class="breadcrumb-item active" aria-current="page">关于我们</li>
             </ol>
         </nav>
+        <!-- <div class="container"> -->
 
-        <?php echo $us['a_content'] ?>
+            <?php echo $us['a_content'] ?>
+
+        <!-- </div> -->
 
     </div>
 <!-- footer start -->
