--- a/view/game.html
+++ b/view/game.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="<?php echo _CSS_ ?>css.css">
 <!-- header start -->
 <?php  include('./view/common/header.html') ; ?>
 <!-- header start -->
@@ -29,16 +30,11 @@
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1">上一页</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">下一页</a>
-            </li>
-        </ul>
+                <li class="page-item disabled">
+                        <?php echo $pagelink ?>
+                        
+                    </li>
+                </ul>
     </nav>    
 
 
