--- a/css/user_info.css
+++ b/css/user_info.css
@@ -1,20 +1,14 @@
-.container{
-	width:100%;
-	background:#fff;
-	margin:0 auto;
-}
-header{
-	width:100%;
-}
-header .head_nav{
+
+
+/* header .head_nav{
 	width:100%; height:60px;
 	background:rgba(21,24,27,0.3);
 	position: fixed;
 	top:0;
 	z-index: 999;
 	line-height: 60px;
-}
-header .head_nav img{
+} */
+/* header .head_nav img{
 	float:left;
 	margin-left:98px;
 }
@@ -30,7 +24,7 @@ header .head_nav nav a{
 }
 header .head_nav nav a:hover{
 	background: #bf4609;
-}
+} */
 .main_nav{
 	width:1003px; height:36px;
 	line-height: 36px;
@@ -49,18 +43,21 @@ header .head_nav nav a:hover{
 	border:1px solid #ccc;
 	overflow: hidden;
 	background:#fcfcfc;
+	position: relative;
+	height: 545px;
 }
 .main .main_left{
 	width:220px;
 	float:left;
 }
 .main .main_left .phone{
-	width:191px;
+	width:300px;
 	height:86px;
 	border-bottom:1px solid #ccc;
-	padding:29px 0 0 29px;
+	padding:49px 0 90px 80px;
 }
 .main .main_left .phone div{
+	margin-bottom: 30px;
 	width:57px;
 	height:57px;
 	border:1px solid #ccc;
@@ -73,28 +70,38 @@ header .head_nav nav a:hover{
 	height:83px;
 	float:left;
 	border-bottom:0;
+	
 }
 .main .main_left p{
-	width:187px;
+	width:300px;
 	height:48px;
-	border-bottom:1px solid #ccc;
+	border-bottom:1px solid rgb(22, 20, 20);
 	line-height: 48px;
 	font-size:14px;
 	color:#666;
+	text-align: center;
+	margin-top: 30px;
 	padding-left:33px;
 }
 .main .main_left .p1{
 	background: #507a45;
 	color:#fff;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	text-indent: -200px;
 }
 .main .main_right{
-	width:782px;height:545px;
+	width:702px;height:545px;
 	border-left:1px solid #ccc;
 	float:left;
 	background:#fff;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 .main .main_right h1{
-	width:759px; height:54px;
+	width:702px; height:54px;
 	border-bottom:1px solid #ccc;
 	color:#507a45;
 	line-height: 54px;
@@ -109,18 +116,21 @@ header .head_nav nav a:hover{
 	border-radius:5px;
 	padding-left:10px;
 }
+.main .main_right table{
+	margin: 50px auto;
+}
 .main .main_right table tr{
 	height:52px;
 }
 .main .main_right table tr td:nth-of-type(1){
-	padding:0 20px;
+	padding:0 20px 20px;
 	text-align:right;
 }
 
 .bottom{
-	width:782px; height:68px;
+	width:702px; height:68px;
 } 
-.foot{
+/* .foot{
 	width:100%; height:68px;
 	background:rgba(50,50,50,1);
 	padding-top:20px;
@@ -130,4 +140,4 @@ header .head_nav nav a:hover{
 	color:#666;
 	font-size: 14px;
 	margin:5px 0;
-}
+} */
