--- a/view/common/header.html
+++ b/view/common/header.html
@@ -39,6 +39,7 @@
             height: 700px;
             background: rgba(0, 0, 0, 0.4);
             position: absolute;
+            position: fixed;
             top: 0;
             display: none;
             z-index: 9999;
